...
    android:background="@color/backgroundWhite"
    android:clickable="true"

    >

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/informationTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundRed"
        app:tabTextColor="@color/textHomepageButtons"
        app:tabRippleColor="@color/button_blue"
        app:tabIndicatorColor="@color/button_blue"
...
            android:text="Modern Uses"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Code"
/>




    </com.google.android.material.tabs.TabLayout>
...
